# CAA-Project

./: .gitignore  Cargo.toml  README.md  test.txt
src/: consts.rs  database.rs  login.rs  main.rs  receive_message.rs  register.rs  send_message.rs  server.rs  user_connected.rs
uml/: changePassword.puml  login.puml  receiveMessage.puml  register.puml  sendMessage.puml
