[package]
name = "CAA-Project"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.7.5"
argon2 = "0.5.3"
rand = "0.8.4"
rand_core = "0.6.4"
hex = "0.4.3"
ecies = "0.2.7"
aes-gcm = "0.10.3"
generic-array = "0.14.7"
libsodium-sys-stable = "1.22.1"
chrono = "0.4.38"
lhtlp = "0.1.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"