[package]
name = "CAA-Project"
version = "0.1.0"
edition = "2021"

[dependencies]
inquire = "0.7.5"
libsodium-sys-stable = "1.22.1"
chrono = "0.4.38"
lhtlp = "0.1.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"
argon2 = "0.5.3"
opaque-ke = { version = "3.0.0", features = ["ristretto255", "argon2"] }
rand = "0.8.5"
generic-array = "0.14.7"